[package]
name = "kvs"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.3" }
snafu = "0.6"
serde = "1.0.106"
serde_cbor = { version = "0.11.1", optional = true }
capnp = { version = "0.12.1", optional = true }
bincode = { version = "1.2.1", optional = true }

[build-dependencies]
capnpc = { version = "0.12.1", optional = true }

[dev-dependencies]
predicates = "1.0.0"
assert_cmd = "0.11.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[features]
default = ["capnproto"]

capnproto = ["capnpc", "capnp"]
